--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -348,7 +348,7 @@ sp_inside_angle_empty           = ignore   # ignore/add/remove/force/not_defined
 sp_angle_colon                  = ignore   # ignore/add/remove/force/not_defined
 
 # Add or remove space after '>'.
-sp_after_angle                  = add      # ignore/add/remove/force/not_defined
+sp_after_angle                  = remove      # ignore/add/remove/force/not_defined
 
 # Add or remove space between '>' and '(' as found in 'new List<byte>(foo);'.
 sp_angle_paren                  = remove   # ignore/add/remove/force/not_defined
