--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -1662,7 +1662,7 @@ nl_cs_property_leave_one_liners = false    # true/false
 
 # Don't split one-line function definitions, as in 'int foo() { return 0; }'.
 # might modify nl_func_type_name
-nl_func_leave_one_liners        = false    # true/false
+nl_func_leave_one_liners        = true     # true/false
 
 # Don't split one-line C++11 lambdas, as in '[]() { return 0; }'.
 nl_cpp_lambda_leave_one_liners  = false    # true/false
