--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,14 @@ option(BUILD_TESTS "Build tests" ON)
 # Add source files from the main project
 add_subdirectory(src)
 
+# Add scripts subdirectory
+add_subdirectory(scripts)
+
 # Build main executable
 add_executable(main main.cpp)
-add_executable(wave_reader scripts/wave_reader.cpp)
+#add_executable(wave_reader scripts/wave_reader.cpp)
 target_link_libraries(main PRIVATE waveshare_cpp)
-target_link_libraries(wave_reader PRIVATE waveshare_cpp)
+#target_link_libraries(wave_reader PRIVATE waveshare_cpp)
 
 # Enable testing
 if(BUILD_TESTS)
