--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -1,3 +1,9 @@
-file(GLOB WAVESHARE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
-add_library(waveshare_cpp ${WAVESHARE_SOURCES})
-target_include_directories(waveshare_cpp PUBLIC ${PROJECT_SOURCE_DIR}/include)
+file(GLOB WAVESHARE_SCRIPTS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+
+# add scripts as executables
+foreach(script_src ${WAVESHARE_SCRIPTS})
+    get_filename_component(script_name ${script_src} NAME_WE)
+    add_executable(${script_name} ${script_src})
+    target_link_libraries(${script_name} PRIVATE waveshare_cpp)
+    target_include_directories(${script_name} PRIVATE ${PROJECT_SOURCE_DIR}/include)
+endforeach()
