Enhance CAN communication scripts and diagnostics
- Refactored wave_bridge.cpp to improve callback functions for USB to SocketCAN and vice versa, enhancing readability and maintainability.
- Updated wave_reader.cpp to include timestamping for received frames and improved argument parsing.
- Revamped wave_writer.cpp to support multiple sending modes, added signal handling for graceful shutdown, and improved output formatting.
- Introduced diagnose_can_setup.sh for comprehensive diagnostics of USB-CAN adapter setup, checking device presence, permissions, and build status.
- Added test_dual_adapter_setup.sh to verify communication between two USB-CAN adapters, ensuring proper configuration and functionality.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,7 +99,8 @@
     "scoped_allocator": "cpp",
     "stack": "cpp",
     "stacktrace": "cpp",
-    "syncstream": "cpp"
+    "syncstream": "cpp",
+    "*.def": "cpp"
   },
   "cmake.sourceDirectory": "${workspaceFolder}",
   "editor.formatOnSave": true,
@@ -125,5 +126,11 @@
   ],
   "cmake.coverageInfoFiles": [
     "${workspaceFolder}/coverage.info"
+  ],
+  "python.autoComplete.extraPaths": [
+    "/opt/ros/jazzy/lib/python3.12/site-packages"
+  ],
+  "python.analysis.extraPaths": [
+    "/opt/ros/jazzy/lib/python3.12/site-packages"
   ]
 }
