feat: add automatic mock motor for CANopen integration tests
Add MockMotorResponder that automatically simulates a CIA402 motor driver
for integration tests, eliminating the need for real hardware or manual
bridge setup.

Changes:
1. test/canopen/test_utils_canopen.hpp:
   - Added MockMotorResponder class
     * Responds to SDO read/write requests on vcan0
     * Simulates CIA402 standard registers (statusword, error, mode, etc.)
     * Mirrors mode_of_operation (0x6060) writes to display register (0x6061)
     * Runs in background thread with proper synchronization
     * Thread-safe register access with mutex protection
   - Added CANopenIntegrationFixture
     * RAII wrapper that auto-starts/stops mock motor
     * Use with TEST_CASE_METHOD for automatic setup/teardown
   - Added helper functions:
     * create_test_socket(): Creates RealCANSocket with timeout
     * load_test_dictionary(): Loads motor_config.json for tests

2. Integration test updates:
   - test_sdo_integration.cpp: All tests use CANopenIntegrationFixture
   - test_cia402_integration.cpp: All tests use CANopenIntegrationFixture
   - test_sdo_client.cpp: Uses test utility helpers
   - test_pdo_manager.cpp: Added MockCANSocket for unit tests
   - Tests now work without real hardware or manual bridge setup

3. CMakeLists.txt updates:
   - src/CMakeLists.txt: Added waveshare_canopen library target
   - Linked nlohmann_json for ObjectDictionary
   - test/CMakeLists.txt: Added test utilities include path
   - Separate build targets for CANopen tests

Benefits:
- Integration tests run automatically on vcan0 without hardware
- Mock motor provides realistic CIA402 SDO responses
- Tests are faster, more reliable, and CI/CD ready
- Clear separation between unit and integration tests
- No manual bridge setup required

Test results (with vcan0):
- test_sdo_integration: 8 assertions, all passed
- test_cia402_integration: Tests working correctly
- Mock motor correctly handles statusword, mode changes, error re

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,22 @@
+# ==============================================================================
+# Waveshare Core Library
+# ==============================================================================
 file(GLOB WAVESHARE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 add_library(waveshare_cpp ${WAVESHARE_SOURCES})
 target_include_directories(waveshare_cpp PUBLIC ${PROJECT_SOURCE_DIR}/include)
+
+# ==============================================================================
+# CANopen Library  
+# ==============================================================================
+file(GLOB CANOPEN_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/canopen/*.cpp")
+add_library(waveshare_canopen ${CANOPEN_SOURCES})
+target_include_directories(waveshare_canopen PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_link_libraries(waveshare_canopen PUBLIC waveshare_cpp)
+
+# Find and link nlohmann_json for ObjectDictionary
+find_package(nlohmann_json QUIET)
+if(nlohmann_json_FOUND)
+    target_link_libraries(waveshare_canopen PUBLIC nlohmann_json::nlohmann_json)
+else()
+    message(WARNING "nlohmann_json not found via CMake, assuming header-only in system paths")
+endif()
