Enhance USBAdapter Testing and Configuration
- Updated test_usb_adapter.cpp to improve USB-CAN device detection and error handling.
- Added functions to find available USB-CAN devices and check for hardware presence.
- Expanded error handling tests for invalid device paths and baud rates.
- Introduced new tests for hardware device interactions and validation of detected devices.
- Added configuration validation tests for device paths and timeout behavior.
- Created bridge_config.json for USB adapter configuration settings.
- Developed comprehensive PDO Testing Guide to document PDO communication tests.
- Implemented integration tests for PDO communication with a mock motor driver in test_pdo_integration.cpp.
- Added tests for TPDO reception, RPDO sending, SYNC-triggered TPDOs, and multi-motor support.
- Included statistics tracking and COB-ID calculation tests for PDO integration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,8 @@ add_subdirectory(src)
 # Add scripts subdirectory
 add_subdirectory(scripts)
 
-# Enable testing
+# Add tests (using Catch2, not CTest)
 if(BUILD_TESTS)
-    enable_testing()
     add_subdirectory(test)
 endif()
 
