--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,18 +1,29 @@
-include(CTest)
+# Waveshare C++ Library - Test Suite (using Catch2)
+# Tests are run using Catch2's native test discovery, not CTest
 
 # Set CMake policy for linker search path behavior
 if(COMMAND cmake_policy)
     cmake_policy(SET CMP0003 NEW)
 endif(COMMAND cmake_policy)
 
-# Copy .env file to build root directory for tests (CTest runs from there)
+# Copy bridge_config.json from config/ to build root directory for tests
+if(EXISTS "${PROJECT_SOURCE_DIR}/config/bridge_config.json")
+    configure_file(
+        "${PROJECT_SOURCE_DIR}/config/bridge_config.json"
+        "${PROJECT_BINARY_DIR}/bridge_config.json"
+        COPYONLY
+    )
+    message(STATUS "Copied config/bridge_config.json to build directory for tests")
+endif()
+
+# Also copy legacy .env file if it exists (for backward compatibility)
 if(EXISTS "${PROJECT_SOURCE_DIR}/.env")
     configure_file(
         "${PROJECT_SOURCE_DIR}/.env"
         "${PROJECT_BINARY_DIR}/.env"
         COPYONLY
     )
-    message(STATUS "Copied .env file to build directory for tests")
+    message(STATUS "Copied .env file to build directory for backward compatibility")
 endif()
 
 # Find or fetch Catch2
@@ -33,14 +44,12 @@ endif()
 file(GLOB TEST_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 file(GLOB CANOPEN_TEST_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/canopen/*.cpp")
 
-# Register the tests for Catch2
-include(Catch)
+# Build tests (Catch2 provides its own test runner)
 foreach(test_src ${TEST_SOURCES})
     get_filename_component(test_name ${test_src} NAME_WE)
     add_executable(${test_name} ${test_src})
     target_link_libraries(${test_name} PRIVATE Catch2::Catch2WithMain waveshare_cpp)
     target_include_directories(${test_name} PRIVATE ${PROJECT_SOURCE_DIR}/include)
-    catch_discover_tests(${test_name})
 endforeach()
 
 # CANopen tests
@@ -52,5 +61,4 @@ foreach(test_src ${CANOPEN_TEST_SOURCES})
         ${PROJECT_SOURCE_DIR}/include
         ${CMAKE_CURRENT_SOURCE_DIR}/canopen  # Make test_utils_canopen.hpp available
     )
-    catch_discover_tests(${test_name})
 endforeach()
